--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@heroicons/react": "^2.2.0",
+    "graphql": "^16.11.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "postgres": "^3.4.5",
